--- a/test/index.html
+++ b/test/index.html
@@ -75,11 +75,18 @@
       transform: translate(-50%, -50%) rotateX(90deg);
       background: -webkit-radial-gradient(center center, farthest-side, #9993, transparent);
     }
+    /* div#spin-container p{
+    width: 250px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
 
     #music-container {
       position: absolute;
-      top: 0;
-      left: 0;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%,-50%);
     }
 
     #carousel-container {
@@ -165,7 +172,7 @@
       }
     }
     #music-container {
-        display: none;
+        /* display: none; */
     }
   </style>
 </head>
@@ -177,31 +184,31 @@
 
   <div id="drag-container">
     <div id="spin-container">
-      <img src="./img/Messenger_creation_04FE26C6-7677-45E9-BAB8-6E0574321B71.jpeg" alt="" width="133" height="200">
-      <img src="./img/Messenger_creation_54D7425E-7B18-4F42-A2F7-E0FEDCEA2945.jpeg" alt="" width="133" height="200">
-      <img src="./img/Messenger_creation_608DB09C-237A-4768-8BBB-459126211E31.jpeg" alt="" width="133" height="200">
-      <img src="./img/Messenger_creation_CD21B8D9-D98E-480B-BBD8-0B4AF7D3FC66.jpeg" alt="" width="133" height="200">
-      <img src="./img/Messenger_creation_FDB771B4-27FF-4F43-8827-5D8ABDCF7C12.jpeg" alt="" width="133" height="200">
+      <img src="./img/IMG_20240912_191705.jpg" alt="" width="133" height="200">
+      <img src="./img/IMG_20240912_191811.jpg" alt="" width="133" height="200">
+      <img src="./img/IMG_20240912_191656.jpg" alt="" width="133" height="200">
+      <img src="./img/IMG_20240912_191727.jpg" alt="" width="133" height="200">
+      <img src="./img/IMG_20240912_191811.jpg" alt="" width="133" height="200">
+      <img src="./img/IMG_20240912_191656.jpg" alt="" width="133" height="200">
+      <img src="./img/IMG_20240912_191705.jpg" alt="" width="133" height="200">
 
-      <p>Bé iu của anh</p>
+      <p>Xinh tóa</p>
 
     </div>
     <div id="ground"></div>
   </div>
 
   <div id="music-container">
-    <audio id="background-music"  controls autoplay>
-        <source src="/test/ssstik.io_1725071240956.mp4" type="audio/mpeg">
+    <audio id="background-music" controls autoplay muted>
+        <source src="./ssstik.io_1725071240956.mp3" type="audio/mpeg">
     </audio>
   </div>
 
   <script>
-    window.addEventListener('load', function() {
-            var audio = document.getElementById('background-music');
-            audio.play().catch(function(error) {
-                console.log('Autoplay was prevented:', error);
-            });
-        });
+   window.onload = function() {
+        var audio = document.getElementById('background-music');
+        audio.muted = false;  // Tự động bật âm thanh khi trang tải
+    };
     var radius = 240;
     var autoRotate = true;
     var rotateSpeed = -60;
